fix image overflow

--- a/src/components/SingleOrder.css
+++ b/src/components/SingleOrder.css
@@ -33,7 +33,7 @@
     height: 150px;
 }
 
-.checkout_product_image {
+.order_list_image {
     width: 30%;
 }
 .checkout_product_image>img{
